--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
 body{
-    background-image: linear-gradient(
-        180deg,
-        #2f6ed3 5%,
-        #5095e4 20%,
-        #5095e4 60%,
-        #2f6ed3 95%
-        );
+    background-image: linear-gradient(360deg, #20bf55 0%, #01baef 74%);
     margin: 0;
     min-height: 100vh;
     width: 100%;
